<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="132dp"
        android:layout_height="65dp"
        android:text="@string/txtLocationName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/idType"
        app:layout_constraintEnd_toStartOf="@+id/idLocationName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/idType"
        android:layout_width="356dp"
        android:layout_height="49dp"
        android:layout_marginBottom="48dp"
        android:entries="@array/lstType"
        app:layout_constraintBottom_toTopOf="@+id/idAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/idDate"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/idTime"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/idTime"
        android:layout_width="156dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/idAddress"
        android:layout_width="357dp"
        android:layout_height="40dp"
        android:layout_marginBottom="296dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="132dp"
        android:layout_height="58dp"
        android:layout_marginBottom="60dp"
        android:text="@string/txtButton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/idLocationName"
        android:layout_width="202dp"
        android:layout_height="65dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/idType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="174dp"
        android:layout_height="42dp"
        android:layout_marginEnd="154dp"
        android:layout_marginRight="154dp"
        android:text="@string/txtAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idAddress" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="91dp"
        android:layout_height="35dp"
        android:text="@string/txtDate"
        app:layout_constraintEnd_toStartOf="@+id/editText4"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDate" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:text="@string/txtTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTime" />
</androidx.constraintlayout.widget.ConstraintLayout>